# admin_template

./: .gitignore  README.md  pyproject.toml
.thinghoo/: Jenkinsfile
docs/: mkdocs.yml
docs/docs/: index.md
src/admin_template/: apps.py  mixins.py  sidebar.py  urls.py
src/admin_template/templates/: 403.html
src/admin_template/templates/admin_template/: about.html  base.html  base_add.html  base_list_view.html  detail.html  header.html  home.html  sidebar.html
src/admin_template/templates/adminlte/lib/: _main_header.html  _main_sidebar.html  _sidebar_module.html
src/admin_template/templatetags/: is_active.py  load_sidebar.py
src/admin_template/tests/: test_list_case.py
src/admin_template/tests/func_tests/: base.py  test_list.py  test_list_add.py  test_list_delete.py  test_list_update.py  test_list_view.py
src/admin_template/tests/tools/: get_csrf_info.py
src/admin_template/utils/: pagination.py
src/admin_template/views/: about.py  generic.py  home.py
src/conf/: settings.py  urls.py
