[tool.poetry]
name = "admin_template"
version = "0.1.0"
description = "一个基础管理系统的模板"
authors = ["svtter <xiuhao@thinghoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "<4.0"
django-bootstrap3 = "^23.1"
thinghoo-adminlte2 = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.0.2"
pytest-django = "^4.5.2"
pre-commit = "^2.20.0"
selenium = "^4.9.1"
djlint = "^1.27.2"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "thinghoo"
url = "https://nexus.beijing-epoch.com/repository/pypi-thinghoo-group/simple"
default = true

# -- FILE: pytest.ini (or tox.ini)
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "conf.settings"
# -- recommended but optional:
python_files = "tests.py test_*.py *_tests.py"
addopts = "-n3"